@@ -1,12 +1,15 @@
     package me.kiriyaga.nami.feature.module.impl.misc;
 
+    import me.kiriyaga.nami.core.executable.model.ExecutableEventType;
     import me.kiriyaga.nami.event.EventPriority;
     import me.kiriyaga.nami.event.SubscribeEvent;
+    import me.kiriyaga.nami.event.impl.PacketReceiveEvent;
     import me.kiriyaga.nami.event.impl.PreTickEvent;
     import me.kiriyaga.nami.feature.module.Module;
     import me.kiriyaga.nami.feature.module.ModuleCategory;
     import me.kiriyaga.nami.feature.module.RegisterModule;
     import me.kiriyaga.nami.feature.setting.impl.IntSetting;
+    import net.minecraft.network.packet.s2c.play.ChatMessageS2CPacket;
     import net.minecraft.text.Text;
 
     import java.util.*;
@@ -17,61 +20,66 @@
     @RegisterModule
     public class AntiSpamModule extends Module {
 
-        private final Map<String, Integer> spamCounts = new HashMap<>();
+        private final Map<String, Integer> spamCounts = new LinkedHashMap<>() {
+            @Override
+            protected boolean removeEldestEntry(Map.Entry<String, Integer> eldest) {
+                return size() > 150;
+            }
+        };
         private final double SIMILARITY_THRESHOLD = 0.85;
-
-        public final IntSetting amount = addSetting(new IntSetting("amount", 25, 10, 125));
 
         public AntiSpamModule() {
             super("anti spam", "Automatically combines repeated chat messages.", ModuleCategory.of("misc"), "antispam");
         }
 
         @SubscribeEvent(priority = EventPriority.LOWEST)
-        public void onPreTick(PreTickEvent ev) {
+        public void onPacketReceive(PacketReceiveEvent event) {
             if (MC == null || MC.inGameHud == null || MC.player == null) return;
 
-            if (MC.player.age % 40 != 0) return;
+            if (event.getPacket() instanceof ChatMessageS2CPacket packet) {
+                EXECUTABLE_MANAGER.getRequestHandler().submit(() -> {
+                    List<Text> recentTexts = CHAT_MANAGER.getAllMessages();
+                    List<ChatMessage> recent = recentTexts.subList(Math.max(0, recentTexts.size() - 50), recentTexts.size())
+                            .stream().map(t -> new ChatMessage(t.getString())).collect(Collectors.toList());
 
-            List<Text> recentTexts = CHAT_MANAGER.getAllMessages();
-            List<ChatMessage> recent = recentTexts.subList(Math.max(0, recentTexts.size() - amount.get()), recentTexts.size())
-                    .stream().map(t -> new ChatMessage(t.getString())).collect(Collectors.toList());
+                    spamCounts.entrySet().removeIf(e -> e.getValue() < 2);
 
-            spamCounts.entrySet().removeIf(e -> e.getValue() < 2);
+                    for (ChatMessage msg : recent) {
+                        boolean found = false;
 
-            for (ChatMessage msg : recent) {
-                boolean found = false;
+                        for (String key : new ArrayList<>(spamCounts.keySet())) {
+                            double sim = similar(msg.text, key);
+                            if (sim >= SIMILARITY_THRESHOLD) {
+                                spamCounts.put(key, spamCounts.get(key) + 1);
+                                found = true;
+                                break;
+                            }
+                        }
 
-                for (String key : new ArrayList<>(spamCounts.keySet())) {
-                    double sim = similar(msg.text, key);
-                    if (sim >= SIMILARITY_THRESHOLD) {
-                        spamCounts.put(key, spamCounts.get(key) + 1);
-                        found = true;
-                        break;
+                        if (!found) {
+                            spamCounts.put(msg.text, 1);
+                        }
                     }
-                }
 
-                if (!found) {
-                    spamCounts.put(msg.text, 1);
-                }
-            }
+                    for (Map.Entry<String, Integer> entry : spamCounts.entrySet()) {
+                        String text = entry.getKey();
+                        int count = entry.getValue();
 
-            for (Map.Entry<String, Integer> entry : spamCounts.entrySet()) {
-                String text = entry.getKey();
-                int count = entry.getValue();
+                        if (count <= 1) continue;
 
-                if (count <= 1) continue;
+                        List<Text> toRemove = CHAT_MANAGER.getAllMessages().stream()
+                                .filter(m -> similar(m.getString(), text) >= SIMILARITY_THRESHOLD)
+                                .collect(Collectors.toList());
 
-                List<Text> toRemove = CHAT_MANAGER.getAllMessages().stream()
-                        .filter(m -> similar(m.getString(), text) >= SIMILARITY_THRESHOLD)
-                        .collect(Collectors.toList());
+                        toRemove.stream().map(Text::getString).toList();
 
-                toRemove.stream().map(Text::getString).toList();
-
-                for (Text t : toRemove) {
-                    CHAT_MANAGER.removeByText(t.getString());
-                    Text newText = CAT_FORMAT.format(text + " {s}x{g}" + count + "{reset}");
-                    CHAT_MANAGER.sendPersistent(text, newText, false);
-                }
+                        for (Text t : toRemove) {
+                            CHAT_MANAGER.removeByText(t.getString());
+                            Text newText = CAT_FORMAT.format(text + " {s}x{g}" + count + "{reset}");
+                            CHAT_MANAGER.sendPersistent(text, newText, false);
+                        }
+                    }
+                }, 0, ExecutableEventType.PRE_TICK);
             }
         }
 
